--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "el-impostor-pro-ultra",
   "private": true,
@@ -11,7 +12,10 @@
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
